--- a/src/index.html
+++ b/src/index.html
@@ -63,14 +63,14 @@
                   <span class="sr-only">다음항목</span>
                 </button>
               </div>
-              <div class="carousel slide" data-interval="2500">
+              <div class="carousel slide">
                 <ul class="carousel-inner">
                   <li>
                     <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=DXB&cabin=Y&tripType=RT&duration=7">
                       <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/DXB-list-pc.jpg">
                       <div class="carousel-description">
-                        <h2 >서울/인천 - 두바이</h2>
-                        <h3>일반석 왕복</h3>
+                        <p>서울/인천 - 두바이</p>
+                        <p>일반석 왕복</p>
                         <div class="price" aria-hidden="true">KRW 1,158,200 ~</div>
                         <span aria-label="1,158,200 대한민국 원"></span>
                       </div>
@@ -80,8 +80,8 @@
                     <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=FUK&cabin=Y&tripType=RT&duration=7">
                       <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/FUK-list-pc.jpg" alt="">
                       <div class="carousel-description">
-                        <h2>서울/인천 - 후쿠오카</h2>
-                        <h3>일반석 왕복</h3>
+                        <p>서울/인천 - 후쿠오카</p>
+                        <p>일반석 왕복</p>
                         <div class="price" aria-hidden="true">KRW 340,400 ~</div>
                         <span aria-label="340,400 대한민국 원"></span>
                       </div>
