--- a/src/index.html
+++ b/src/index.html
@@ -71,8 +71,10 @@
                       <div class="carousel-description">
                         <p>서울/인천 - 두바이</p>
                         <p>일반석 왕복</p>
-                        <div class="price" aria-hidden="true">KRW 1,158,200 ~</div>
-                        <span aria-label="1,158,200 대한민국 원"></span>
+                        <p class="price">
+                          1,158,200 ~
+                          <span aria-label="대한민국 원">KRW</span>
+                        </p>
                       </div>
                     </a>
                   </li>
@@ -82,8 +84,10 @@
                       <div class="carousel-description">
                         <p>서울/인천 - 후쿠오카</p>
                         <p>일반석 왕복</p>
-                        <div class="price" aria-hidden="true">KRW 340,400 ~</div>
-                        <span aria-label="340,400 대한민국 원"></span>
+                        <p class="price">
+                          340,400 ~
+                          <span aria-label="대한민국 원">KRW</span>
+                        </p>
                       </div>
                     </a>
                   </li>
@@ -91,10 +95,12 @@
                     <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HKT&cabin=Y&tripType=RT&duration=7">
                       <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HKT-list-pc.jpg" alt="">
                       <div class="carousel-description">
-                        <h2>서울/인천 - 푸캣</h2>
-                        <h3>일반석 왕복</h3>
-                        <div class="price" aria-hidden="true">KRW 713,000 ~</div>
-                        <span aria-label="713,000 대한민국 원"></span>
+                        <p>서울/인천 - 푸캣</p>
+                        <p>일반석 왕복</p>
+                        <p class="price">
+                          713,000 ~
+                          <span aria-label="대한민국 원">KRW</span>
+                        </p>
                       </div>
                     </a>
                   </li>
@@ -102,10 +108,12 @@
                     <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=CNX&duration=7&cabin=Y">
                       <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/CNX-list-pc.jpg" alt="">
                       <div class="carousel-description">
-                        <h2>서울/인천 - 치앙마이</h2>
-                        <h3>일반석 왕복</h3>
-                        <div class="price" aria-hidden="true">KRW 839,000 ~</div>
-                        <span aria-label="839,000 대한민국 원"></span>
+                        <p>서울/인천 - 치앙마이</p>
+                        <p>일반석 왕복</p>
+                        <p class="price">
+                          839,000 ~
+                          <span aria-label="대한민국 원">KRW</span>
+                        </p>
                       </div>
                     </a>
                   </li>
@@ -113,10 +121,12 @@
                     <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=BCN&cabin=Y&tripType=RT&duration=7">
                       <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/BCN-list-pc.jpg" alt="">
                       <div class="carousel-description">
-                        <h2>서울/인천 - 바르셀로나</h2>
-                        <h3>일반석 왕복</h3>
-                        <div class="price" aria-hidden="true">KRW 1,546,400 ~</div>
-                        <span aria-label="1,546,400 대한민국 원"></span>
+                        <p>서울/인천 - 바르셀로나</p>
+                        <p>일반석 왕복</p>
+                        <p class="price">
+                          1,546,400 ~
+                          <span aria-label="대한민국 원">KRW</span>
+                        </p>
                       </div>
                     </a>
                   </li>
@@ -124,10 +134,12 @@
                     <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HAN&cabin=Y&tripType=RT&duration=7">
                       <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HAN-list-pc.jpg" alt="">
                       <div class="carousel-description">
-                        <h2>서울/인천 - 하노이</h2>
-                        <h3>일반석 왕복</h3>
-                        <div class="price" data-hidden="true">KRW 527,600 ~</div>
-                        <span aria-label="527,600 대한민국 원"></span>
+                        <p>서울/인천 - 하노이</p>
+                        <p>일반석 왕복</p>
+                        <p class="price">
+                          527,600 ~
+                          <span aria-label="대한민국 원">KRW</span>
+                        </p>
                       </div>
                     </a>
                   </li>
@@ -135,10 +147,12 @@
                     <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=FCO&cabin=Y&tripType=RT&duration=7">
                       <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/FCO-list-pc.jpg" alt="">
                       <div class="carousel-description">
-                        <h2>서울/인천 - 로마/레오나르도 다빈치</h2>
-                        <h3>일반석 왕복</h3>
-                        <div class="price" aria-hidden="true">KRW 1,454,400 ~</div>
-                        <span aria-label="1,454,400 대한민국 원"></span>
+                        <p>서울/인천 - 로마/레오나르도 다빈치</p>
+                        <p>일반석 왕복</p>
+                        <p class="price">
+                          1,454,400 ~
+                          <span aria-label="대한민국 원">KRW</span>
+                        </p>
                       </div>
                     </a>
                   </li>
@@ -146,10 +160,12 @@
                     <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HNL&cabin=Y&tripType=RT&duration=7">
                       <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HNL-list-pc.jpg" alt="">
                       <div class="carousel-description">
-                        <h2>서울/인천 - 호놀룰루(하와이)</h2>
-                        <h3>일반석 왕복</h3>
-                        <div class="price" aria-hidden="true">KRW 1,245,600 ~</div>
-                        <span aria-label="1,245,600 대한민국 원"></span>
+                        <p>서울/인천 - 호놀룰루(하와이)</p>
+                        <p>일반석 왕복</p>
+                        <p class="price">
+                          1,245,600 ~
+                          <span aria-label="대한민국 원">KRW</span>
+                        </p>
                       </div>
                     </a>
                   </li>
