fix: 글자가 두번 읽히는 오류 해결

--- a/src/index.html
+++ b/src/index.html
@@ -69,12 +69,17 @@
                     <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=DXB&cabin=Y&tripType=RT&duration=7">
                       <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/DXB-list-pc.jpg">
                       <div class="carousel-description">
-                        <p>서울/인천 - 두바이</p>
-                        <p>일반석 왕복</p>
-                        <p class="price">
+                        <p aria-hidden="true">서울/인천 - 두바이</p>
+                        <p aria-hidden="true">일반석 왕복</p>
+                        <p class="price" aria-hidden="true">
                           1,158,200 ~
                           <span aria-label="대한민국 원">KRW</span>
                         </p>
+                        <div class="sr-only">
+                          <p>서울/인천 - 두바이</p>
+                          <p>일반석 왕복</p>
+                          <p>1,158,200원 부터 ~</p>
+                        </div>
                       </div>
                     </a>
                   </li>
@@ -82,12 +87,17 @@
                     <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=FUK&cabin=Y&tripType=RT&duration=7">
                       <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/FUK-list-pc.jpg" alt="">
                       <div class="carousel-description">
-                        <p>서울/인천 - 후쿠오카</p>
-                        <p>일반석 왕복</p>
-                        <p class="price">
+                        <p aria-hidden="true">서울/인천 - 후쿠오카</p>
+                        <p aria-hidden="true">일반석 왕복</p>
+                        <p class="price" aria-hidden="true">
                           340,400 ~
                           <span aria-label="대한민국 원">KRW</span>
                         </p>
+                        <div class="sr-only">
+                          <p>서울/인천 - 후쿠오카</p>
+                          <p>일반석 왕복</p>
+                          <p>340,400원 부터</p>
+                        </div>
                       </div>
                     </a>
                   </li>
@@ -95,12 +105,17 @@
                     <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HKT&cabin=Y&tripType=RT&duration=7">
                       <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HKT-list-pc.jpg" alt="">
                       <div class="carousel-description">
-                        <p>서울/인천 - 푸캣</p>
-                        <p>일반석 왕복</p>
-                        <p class="price">
+                        <p aria-hidden="true">서울/인천 - 푸캣</p>
+                        <p aria-hidden="true">일반석 왕복</p>
+                        <p class="price" aria-hidden="true">
                           713,000 ~
                           <span aria-label="대한민국 원">KRW</span>
                         </p>
+                        <div class="sr-only">
+                          <p>서울/인천 - 푸캣</p>
+                          <p>일반석 왕복</p>
+                          <p>713,000원 부터</p>
+                        </div>
                       </div>
                     </a>
                   </li>
@@ -108,12 +123,17 @@
                     <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=CNX&duration=7&cabin=Y">
                       <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/CNX-list-pc.jpg" alt="">
                       <div class="carousel-description">
-                        <p>서울/인천 - 치앙마이</p>
-                        <p>일반석 왕복</p>
-                        <p class="price">
+                        <p aria-hidden="true">서울/인천 - 치앙마이</p>
+                        <p aria-hidden="true">일반석 왕복</p>
+                        <p class="price" aria-hidden="true">
                           839,000 ~
                           <span aria-label="대한민국 원">KRW</span>
                         </p>
+                        <div class="sr-only">
+                          <p>서울/인천 - 치앙마이</p>
+                          <p>일반석 왕복</p>
+                          <p>839,000원 부터</p>
+                        </div>
                       </div>
                     </a>
                   </li>
@@ -121,12 +141,17 @@
                     <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=BCN&cabin=Y&tripType=RT&duration=7">
                       <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/BCN-list-pc.jpg" alt="">
                       <div class="carousel-description">
-                        <p>서울/인천 - 바르셀로나</p>
-                        <p>일반석 왕복</p>
-                        <p class="price">
+                        <p aria-hidden="true">서울/인천 - 바르셀로나</p>
+                        <p aria-hidden="true">일반석 왕복</p>
+                        <p class="price" aria-hidden="true">
                           1,546,400 ~
                           <span aria-label="대한민국 원">KRW</span>
                         </p>
+                        <div class="sr-only">
+                          <p>서울/인천 - 바르셀로나</p>
+                          <p>일반석 왕복</p>
+                          <p>1,546,400원 부터</p>
+                        </div>
                       </div>
                     </a>
                   </li>
@@ -134,12 +159,17 @@
                     <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HAN&cabin=Y&tripType=RT&duration=7">
                       <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HAN-list-pc.jpg" alt="">
                       <div class="carousel-description">
-                        <p>서울/인천 - 하노이</p>
-                        <p>일반석 왕복</p>
-                        <p class="price">
+                        <p aria-hidden="true">서울/인천 - 하노이</p>
+                        <p aria-hidden="true">일반석 왕복</p>
+                        <p class="price" aria-hidden="true">
                           527,600 ~
                           <span aria-label="대한민국 원">KRW</span>
                         </p>
+                        <div class="sr-only">
+                          <p>서울/인천 - 하노이</p>
+                          <p>일반석 왕복</p>
+                          <p>527,600원 부터</p>
+                        </div>
                       </div>
                     </a>
                   </li>
@@ -147,12 +177,17 @@
                     <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=FCO&cabin=Y&tripType=RT&duration=7">
                       <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/FCO-list-pc.jpg" alt="">
                       <div class="carousel-description">
-                        <p>서울/인천 - 로마/레오나르도 다빈치</p>
-                        <p>일반석 왕복</p>
-                        <p class="price">
+                        <p aria-hidden="true">서울/인천 - 로마/레오나르도 다빈치</p>
+                        <p aria-hidden="true">일반석 왕복</p>
+                        <p class="price" aria-hidden="true">
                           1,454,400 ~
                           <span aria-label="대한민국 원">KRW</span>
                         </p>
+                        <div class="sr-only">
+                          <p>서울/인천 - 로마/레오나르도 다빈치</p>
+                          <p>일반석 왕복</p>
+                          <p>1,454,400원 부터</p>
+                        </div>
                       </div>
                     </a>
                   </li>
@@ -160,12 +195,17 @@
                     <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HNL&cabin=Y&tripType=RT&duration=7">
                       <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HNL-list-pc.jpg" alt="">
                       <div class="carousel-description">
-                        <p>서울/인천 - 호놀룰루(하와이)</p>
-                        <p>일반석 왕복</p>
-                        <p class="price">
+                        <p aria-hidden="true">서울/인천 - 호놀룰루(하와이)</p>
+                        <p aria-hidden="true">일반석 왕복</p>
+                        <p class="price" aria-hidden="true">
                           1,245,600 ~
                           <span aria-label="대한민국 원">KRW</span>
                         </p>
+                        <div class="sr-only">
+                          <p>서울/인천 - 호놀룰루(하와이)</p>
+                          <p>일반석 왕복</p>
+                          <p>1,245,600원 부터</p>
+                        </div>
                       </div>
                     </a>
                   </li>
