--- a/src/index.html
+++ b/src/index.html
@@ -8,35 +8,216 @@
   </head>
   <body>
     <div id="page">
-      <h1>항공편 예약</h1>
-      <h2>승객 선택</h2>
-      <div class="reservation-field adult-passenger-field">
-        <div class="label-container">
-          <label for="adult-passenger-count-input">성인</label>
-          <div class="helptip-container">
-            <button type="button" class="helptip-trigger" aria-label="성인 기준 상세 안내 열기"><span>?</span></button>
-            <div class="helptip">
-              <span class="helptip-content" aria-hidden="true">국제선 만 12세 이상, 국내선 만 13세 이상</span>
-              <button type="button" class="helptip-closer" aria-label="성인 기준 상세 안내 닫기"><span>x</span></button>
+      <div class="tab-container">
+        <ul class="tabs">
+          <li class="tab-item active" data-tabId="airline-reservation">
+            <span class="tab-link">항공편예약</span>
+          </li>
+          <li class="tab-item" data-tabId="airline-product">
+            <span class="tab-link">여행상품</span>
+          </li>
+        </ul>
+        <div class="panels">
+          <div class="panel" id="airline-reservation">
+            <h1>항공편 예약</h1>
+            <h2>승객 선택</h2>
+            <div class="reservation-field adult-passenger-field">
+              <div class="label-container">
+                <label for="adult-passenger-count-input">성인</label>
+                <div class="helptip-container">
+                  <button type="button" class="helptip-trigger" aria-label="성인 기준 상세 안내 열기"><span>?</span></button>
+                  <div class="helptip">
+                    <span class="helptip-content" aria-hidden="true">국제선 만 12세 이상, 국내선 만 13세 이상</span>
+                    <button type="button" class="helptip-closer" aria-label="성인 기준 상세 안내 닫기"><span>x</span></button>
+                  </div>
+                </div>
+              </div>
+              <div class="spin-input-container adult-passenger-spin">
+                <button type="button" class="spin-button" data-step="-1" aria-label="성인 탑승자 한 명 줄이기">-</button>
+                <input
+                  id="adult-passenger-count-input"
+                  class="passenger-count-input"
+                  type="number"
+                  min="0"
+                  max="3"
+                  value="0"
+                ></input>
+                <button type="button" class="spin-button" data-step="1" aria-label="성인 탑승자 한 명 늘리기">+</button>
+              </div>
+            </div>
+          </div>
+          <div class="panel" id="airline-product">
+            <h1>지금 떠나기 좋은 여행</h1>
+            <span class="sr-only airline-product-count">목록 8개 항목 포함</span>
+            <div class="carousel-container">
+              <!-- Controls -->
+              <div class="left carousel-control">
+                <button type="button" data-slide="prev" aria-label="이전 항목" aria-disabled="true">
+                  <span aria-hidden="true">⬅️</span>
+                  <span class="sr-only">이전항목</span>
+                </button>
+              </div>
+              <div class="carousel slide">
+                <ul class="carousel-inner">
+                  <li>
+                    <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=DXB&cabin=Y&tripType=RT&duration=7">
+                      <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/DXB-list-pc.jpg">
+                      <div class="carousel-description">
+                        <p aria-hidden="true">서울/인천 - 두바이</p>
+                        <p aria-hidden="true">일반석 왕복</p>
+                        <p class="price" aria-hidden="true">
+                          1,158,200 ~
+                          <span aria-label="대한민국 원">KRW</span>
+                        </p>
+                        <div class="sr-only">
+                          <p>서울/인천 - 두바이</p>
+                          <p>일반석 왕복</p>
+                          <p>1,158,200원 부터 ~</p>
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=FUK&cabin=Y&tripType=RT&duration=7">
+                      <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/FUK-list-pc.jpg" alt="">
+                      <div class="carousel-description">
+                        <p aria-hidden="true">서울/인천 - 후쿠오카</p>
+                        <p aria-hidden="true">일반석 왕복</p>
+                        <p class="price" aria-hidden="true">
+                          340,400 ~
+                          <span aria-label="대한민국 원">KRW</span>
+                        </p>
+                        <div class="sr-only">
+                          <p>서울/인천 - 후쿠오카</p>
+                          <p>일반석 왕복</p>
+                          <p>340,400원 부터</p>
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HKT&cabin=Y&tripType=RT&duration=7">
+                      <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HKT-list-pc.jpg" alt="">
+                      <div class="carousel-description">
+                        <p aria-hidden="true">서울/인천 - 푸캣</p>
+                        <p aria-hidden="true">일반석 왕복</p>
+                        <p class="price" aria-hidden="true">
+                          713,000 ~
+                          <span aria-label="대한민국 원">KRW</span>
+                        </p>
+                        <div class="sr-only">
+                          <p>서울/인천 - 푸캣</p>
+                          <p>일반석 왕복</p>
+                          <p>713,000원 부터</p>
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=CNX&duration=7&cabin=Y">
+                      <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/CNX-list-pc.jpg" alt="">
+                      <div class="carousel-description">
+                        <p aria-hidden="true">서울/인천 - 치앙마이</p>
+                        <p aria-hidden="true">일반석 왕복</p>
+                        <p class="price" aria-hidden="true">
+                          839,000 ~
+                          <span aria-label="대한민국 원">KRW</span>
+                        </p>
+                        <div class="sr-only">
+                          <p>서울/인천 - 치앙마이</p>
+                          <p>일반석 왕복</p>
+                          <p>839,000원 부터</p>
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=BCN&cabin=Y&tripType=RT&duration=7">
+                      <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/BCN-list-pc.jpg" alt="">
+                      <div class="carousel-description">
+                        <p aria-hidden="true">서울/인천 - 바르셀로나</p>
+                        <p aria-hidden="true">일반석 왕복</p>
+                        <p class="price" aria-hidden="true">
+                          1,546,400 ~
+                          <span aria-label="대한민국 원">KRW</span>
+                        </p>
+                        <div class="sr-only">
+                          <p>서울/인천 - 바르셀로나</p>
+                          <p>일반석 왕복</p>
+                          <p>1,546,400원 부터</p>
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HAN&cabin=Y&tripType=RT&duration=7">
+                      <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HAN-list-pc.jpg" alt="">
+                      <div class="carousel-description">
+                        <p aria-hidden="true">서울/인천 - 하노이</p>
+                        <p aria-hidden="true">일반석 왕복</p>
+                        <p class="price" aria-hidden="true">
+                          527,600 ~
+                          <span aria-label="대한민국 원">KRW</span>
+                        </p>
+                        <div class="sr-only">
+                          <p>서울/인천 - 하노이</p>
+                          <p>일반석 왕복</p>
+                          <p>527,600원 부터</p>
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=FCO&cabin=Y&tripType=RT&duration=7">
+                      <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/FCO-list-pc.jpg" alt="">
+                      <div class="carousel-description">
+                        <p aria-hidden="true">서울/인천 - 로마/레오나르도 다빈치</p>
+                        <p aria-hidden="true">일반석 왕복</p>
+                        <p class="price" aria-hidden="true">
+                          1,454,400 ~
+                          <span aria-label="대한민국 원">KRW</span>
+                        </p>
+                        <div class="sr-only">
+                          <p>서울/인천 - 로마/레오나르도 다빈치</p>
+                          <p>일반석 왕복</p>
+                          <p>1,454,400원 부터</p>
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HNL&cabin=Y&tripType=RT&duration=7">
+                      <img src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HNL-list-pc.jpg" alt="">
+                      <div class="carousel-description">
+                        <p aria-hidden="true">서울/인천 - 호놀룰루(하와이)</p>
+                        <p aria-hidden="true">일반석 왕복</p>
+                        <p class="price" aria-hidden="true">
+                          1,245,600 ~
+                          <span aria-label="대한민국 원">KRW</span>
+                        </p>
+                        <div class="sr-only">
+                          <p>서울/인천 - 호놀룰루(하와이)</p>
+                          <p>일반석 왕복</p>
+                          <p>1,245,600원 부터</p>
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <div class="right carousel-control">
+                <button type="button" data-slide="next" aria-label="다음 항목" aria-disabled="true">
+                  <span aria-hidden="true">➡</span>
+                  <span class="sr-only">다음항목</span>
+                </button>
+              </div>
             </div>
           </div>
         </div>
-        <div class="spin-input-container adult-passenger-spin">
-          <button type="button" class="spin-button" data-step="-1" aria-label="성인 탑승자 한 명 줄이기">-</button>
-          <input
-            id="adult-passenger-count-input"
-            class="passenger-count-input"
-            type="number"
-            min="0"
-            max="3"
-            value="0"
-          ></input>
-          <button type="button" class="spin-button" data-step="1" aria-label="성인 탑승자 한 명 늘리기">+</button>
-        </div>
       </div>
+      <div id="snackbar" role="status"></div>
+      <div id="aria-live-polite-message" class="hidden-for-aria-live" aria-live="polite"></div>
+      <div id="aria-live-assertive-message" class="hidden-for-aria-live" aria-live="assertive"></div>
     </div>
-    <div id="snackbar" role="status"></div>
-    <div id="aria-live-polite-message" class="hidden-for-aria-live" aria-live="polite"></div>
-    <div id="aria-live-assertive-message" class="hidden-for-aria-live" aria-live="assertive"></div>
   </body>
 </html>
