refactor: 적절한 제목 및 설명 추가

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>React App</title>
+  <title>A11Y AIRLINE - 항공권 예매 및 여행지 추천</title>
+  <meta name="description" content="A11Y AIRLINE 항공사로 항공권 예매를 할 수 있으며 여행지를 추천해드립니다.">
 </head>
 
 <body>
