--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>A11Y AIRLINE | 안전하고 쾌적한 여행</title>
+    <title>A11Y AIRLINE | 항공권 예매 및 인기 여행 상품</title>
   </head>
 
   <body>
