--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="title" content="A11Y AIRLINE | 접근성 좋은 항공사" />
+    <meta
+      name="description"
+      content="고객 여러분의 안전하고 쾌적한 여행을 위해 최선을 다하는 A11Y AIRLINE입니다."
+    />
+    <title>A11Y AIRLINE | 접근성 좋은 항공사</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>React App</title>
-</head>
-
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
-</body>
-
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
