feat: 모달 열렸을 때 본문이 스크린 리더에 잡히지 않도록 설정

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>a11y airplane 항공권 예매 및 여행 정보</title>
+    <title>A11Y AIRLINE - 당신을 위한 안전하고 쾌적한 여행</title>
   </head>
 
   <body>
