refactor: 페이지 성격에 맞게 title 수정

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>A11Y 항공 좌석 예매</title>
+    <title>A11Y 항공</title>
   </head>
 
   <body>
