--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>A11Y AIRLINE 항공권 예매</title>
+    <title>A11Y AIRLINE</title>
   </head>
 
   <body>
