feat: 페이지 접근성 개선

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>React App</title>
+  <title>A11Y AIRLINE - 접근성을 고려한 항공사 예약 서비스</title>
 </head>
 
 <body>
