--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>접근성 항공</title>
+    <title>접근성 항공 - 메인 페이지</title>
   </head>
 
   <body>
