feat: 메타 태그 추가

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>A11Y AIRLINE</title>
+
+    <meta
+      name="description"
+      content="A11Y AIRLINE은 누구나 접근 가능한 항공 여행 서비스를 제공합니다."
+    />
+    <meta property="og:title" content="A11Y AIRLINE" />
+    <meta property="og:description" content="누구나 접근 가능한 항공 여행 서비스" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://example.com" />
   </head>
 
   <body>
