--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>a11y-airline</title>
+    <meta
+      name="description"
+      content="a11y-airline은 누구나 쉽고 편리하게 항공권을 예매할 수 있도록 접근성을 강화한 항공사 웹사이트입니다."
+    />
   </head>
 
   <body>
