--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>항공사 웹 접근성</title>
+    <title>A11Y AIRLINE - 항공권 예매 및 여행 상품</title>
   </head>
 
   <body>
