fix: 메타 태그의 저자 정보 수정

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       content="A11Y Airline - 누구나 접근할 수 있는 항공 여행 상품 안내 페이지"
     />
     <meta name="keywords" content="항공권, 접근성, 여행, A11Y, 항공사" />
-    <meta name="mun-kyeong" content="Woowa-Course-7th" />
+    <meta name="author" content="mun-kyeong, Woowa-Course-7th" />
 
     <!-- SNS/공유를 위한 Open Graph(OG) 태그 -->
     <meta property="og:title" content="A11Y Airline" />
