feat: SEO를 위한 메타 태그 추가

--- a/index.html
+++ b/index.html
@@ -1,15 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="A11Y AIRLINE - 접근성을 고려한 항공권 예매 서비스. 안전하고 쾌적한 여행을 위한 최고의 선택. 지금 항공편을 검색하고 예약하세요."
+    />
+    <meta name="keywords" content="항공권, 예매, 항공편, 여행, 접근성, A11Y AIRLINE, 항공사" />
+    <meta name="author" content="A11Y AIRLINE" />
+    <meta property="og:title" content="A11Y AIRLINE - 접근성 항공권 예매 서비스" />
+    <meta
+      property="og:description"
+      content="A11Y AIRLINE - 접근성을 고려한 항공권 예매 서비스. 안전하고 쾌적한 여행을 위한 최고의 선택."
+    />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="A11Y AIRLINE - 접근성 항공권 예매 서비스" />
+    <meta
+      name="twitter:description"
+      content="A11Y AIRLINE - 접근성을 고려한 항공권 예매 서비스. 안전하고 쾌적한 여행을 위한 최고의 선택."
+    />
+    <title>A11Y AIRLINE - 접근성 항공권 예매 서비스</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>React App</title>
-</head>
-
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
-</body>
-
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
